maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:5: error: ';' expected but '=' found.
  (x, y) = Biscuit();
         ^JediEscaper:21: error: identifier expected but '(' found.
def ecrit ((x:Int, y:Int), i:Int) = {
           ^JediEscaper:65: error: ':' expected but '}' found.
}
^